# dog

./: Cargo.toml  README.md  build.rs  config.toml  config.yaml
src/: check.rs  input.rs  main.rs  statistic.rs
src/input/: config.rs
